fix(NavigationBar): text overflow fixes

--- a/src/components/Widgets/NavigationBar/NavigationBar.css
+++ b/src/components/Widgets/NavigationBar/NavigationBar.css
@@ -56,6 +56,7 @@
     transition: color 200ms var(--emphasized-motion);
     max-width: 90%;
     text-overflow: ellipsis;
+    overflow: hidden;
 }
 
 .NavigationBarItem--selected > .IconContainer > .icon {
